Write a grid's saved state with a Base64 Java still ships